Merged changes from branch/1.0 since the configid branch was cut     svn merge -r374818:HEAD  https://svn.apache.org/repos/asf/geronimo/branches/1.0
Changed plugin version numbers to new format:
    geronimo_packaging_plugin_version=1.1.0-2
    geronimo_assembly_plugin_version=1.1.0-8
    geronimo_deployment_plugin_version=1.1.0-1
    geronimo_dependency_plugin_version=1.1.0-1


git-svn-id: https://svn.apache.org/repos/asf/geronimo/branches/configid@381214 13f79535-47bb-0310-9956-ffa450edef68